CHANGES for ARSperl

Revision history for ARSperl.

BM  = Bill Middleton <wjm at metronet.com>
JCM = Jeff Murphy    <jcmurphy at buffalo.edu>
JWM = Joel Murphy    <jmurphy at acsu.buffalo.edu>

Note: items preceeded by a '!' denoted changes that are incompatible with
previous versions of arsperl and may require altering of some arsperl
scripts.
Released: x/x/x Version: 1.68


(JCM)   arsperl now requires at minimum perl 5.004.

(JCM)   converted "na" "sv_unref" to PL_ namespace. 
        added perl-version checking so it will still compile
        against 5.004.

(JCM) ! ars4.5 compatibility changes. the following functions
        have altered return values which will break scripts that
        use them _if you compile against 4.5 or later libraries_
   		
   		ars_GetActiveLink 
   		ars_GetFilter 
   		ars_GetEscalation 
   		ars_CreateActiveLink 
        
        see the documentation on the return values of these functions
        for details on what has changed.

(JCM) ! changed ars_GetCharMenu so that {'menuType'} is returned
        as a string (decoded) instead of an integer.


Released: 2/17/00 Version: 1.67


(JCM)   ars_SetServerPort() added

(JCM)   fixed bug in ars_GetListSQL()


Released: 12/3/99 Version: 1.66


(JCM)   fixed a typo in support.c 


Released: 11/23/99 Version: 1.65


(JCM)   added better support for decoding filters/activelinks
        for arsystem 4.0 (not finished yet)

(JCM)   added support for data type "decimal" when performing
        (Set|Create)Entry


Released: 04/7/99 Version: 1.6403 BETA


(JCM)   tested/fixed compiling against pre-4.0 apis. 

(JCM)   OO: now checks named params to ensure you don't
        mis-spell them.

(JCM)   attachment allows specify a 'name' hash key so you can
        customize the name that appears in the attachment field
        in the usertool.  (Nick Stoughton {NickS at ISRWORLD.com})

(JCM)   OO: form->setSort method added

(JCM)   OO: better error handling/catching
