@@ -1,0 +1,11 @@
+ars_CreateEntry() normally returns the entry ID created on success. 
+ 
+When there are Messages from Filters, whether of Note, Warning or Error 
+severity - no entry ID is returned by ars_CreateEntry(), even if the 
+create was successful. And, dumping the entire %ars_errhash does not show 
+the 
+filter orginated message text. 
+ 
+Anyone know how to get the Filter messages, and how to get the new entry ID? 
+ 
+
