@@ -866,4 +866,10 @@ number of queries made.</font></td></tr>
 <tr bgcolor='#dddddd'><td width='10%'>(JCM)</td><td width='90%'><font color='black'>Installation, history, and Gnu documentation added.
 Removed -lars from makefile (internal C library that wasn'treleased), not needed for arsperl.</font></td></tr>
 <tr bgcolor='#eeeeee'><td width='10%'>(JCM)</td><td width='90%'><font color='black'>Added example scripts and html documentation.
-</body></html>
+</table></td></tr></table>
+
+<P>
+
+
+<P>
+<PRE>$Header: /cvsroot/arsperl/ARSperl/html/changes.html,v 1.6 2000/05/24 18:09:40 jcmurphy Exp $</PRE></body></html>
