@@ -9,6 +9,8 @@ JWM = Joel Murphy    <jmurphy at acsu.buffalo.edu>
 Note: items preceeded by a '!' denoted changes that are incompatible with
 previous versions of arsperl and may require altering of some arsperl
 scripts.
+
+
 Released: x/x/x Version: 1.68
 
 
@@ -479,3 +481,6 @@ Released: 01/12/96 Version: 1.0beta
 
 
 arsperl@arsperl.org
+
+$Header: /cvsroot/arsperl/ARSperl/CHANGES,v 1.34 2000/05/24 18:08:03 jcmurphy Exp $
+
